--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.madAssignment1"
         tools:targetApi="31">
         <activity
+            android:name=".Register_Page"
+            android:exported="true" />
+        <activity
             android:name=".Login_Page"
             android:exported="true" />
         <activity
