--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/Theme.madAssignment1"
         tools:targetApi="31">
         <activity
+            android:name=".Points_Page"
+            android:exported="false" />
+        <activity
             android:name=".productpage"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Register_Page"
             android:exported="true" />
