--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,14 @@
         android:theme="@style/Theme.madAssignment1"
         tools:targetApi="31">
         <activity
+            android:name=".ProfilePage"
+            android:exported="true" />
+        <activity
             android:name=".cartpage"
             android:exported="true" />
         <activity
             android:name=".productpage"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Register_Page"
             android:exported="true" />
