--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.madAssignment1"
         tools:targetApi="31">
         <activity
+            android:name=".dialog_password_input"
+            android:exported="false" />
+        <activity
             android:name=".ProfilePage"
             android:exported="true" />
         <activity
@@ -20,7 +23,7 @@
             android:exported="true" />
         <activity
             android:name=".productpage"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".Register_Page"
             android:exported="true" />
