--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ googleServices = "4.4.1"
 firebaseDatabase = "21.0.0"
 firebaseFirestore = "25.0.0"
 firebaseAuth = "23.0.0"
+recyclerview = "1.3.2"
 
 [libraries]
 firebase-firestore-v3300 = { module = "com.google.firebase:firebase-firestore", version.ref = "firebaseFirestoreVersion" }
@@ -29,6 +30,7 @@ google-services = { group = "com.google.gms", name = "google-services", version.
 firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
