--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,9 @@
             android:exported="true" />
         <activity
             android:name=".productpage"
-            android:exported="true"></activity>
-            android:exported="true" />
+            android:exported="true">
+        </activity>
+
         <activity
             android:name=".Register_Page"
             android:exported="true" />
