--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.madAssignment1"
         tools:targetApi="31">
         <activity
+            android:name=".chatbot"
+            android:exported="false" />
+        <activity
             android:name=".ProfilePage"
             android:exported="true" />
         <activity
@@ -20,9 +23,7 @@
             android:exported="true" />
         <activity
             android:name=".productpage"
-            android:exported="true"></activity>
-            android:name=".VoucherListActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Points_Page"
             android:exported="true" />
@@ -52,5 +53,10 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
+
+<!--    for voice recognition-->
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
+
 
 </manifest>
