--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!-- for voice recognition -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <!-- Jason's Permissions -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.madAssignment1"
         tools:targetApi="31">
+        <activity
+            android:name=".activity_maps"
+            android:exported="true" />
         <activity
             android:name=".chatbot"
             android:exported="false" />
@@ -52,11 +61,9 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDGJRH2YB6yHLy9FVCdhA0MV2H6xnauKB0" />
     </application>
-
-<!--    for voice recognition-->
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-
-
 
 </manifest>
