--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/mainlogo"
+        android:label="Enchante"
+        android:roundIcon="@drawable/mainlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.madAssignment1"
         tools:targetApi="31">
