--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,22 +26,22 @@
         android:theme="@style/Theme.madAssignment1"
         tools:targetApi="31">
         <activity
-            android:name=".activity_maps"
+            android:name=".mapFragment"
             android:exported="true" />
         <activity
             android:name=".chatbot"
             android:exported="false" />
         <activity
-            android:name=".profilePage"
+            android:name=".profileFragment"
             android:exported="true" />
         <activity
-            android:name=".cartpage"
+            android:name=".cartFragment"
             android:exported="true" />
         <activity
             android:name=".productpage"
             android:exported="true" />
         <activity
-            android:name=".Points_Page"
+            android:name=".pointsFragment"
             android:exported="true" />
         <activity
             android:name=".registerPage"
