--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <!-- for voice recognition -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <queries>
-        <package android:name="com.google.android.googlequicksearchbox"/>
-    </queries>
-
-    <!-- Jason's Permissions -->
+        <package android:name="com.google.android.googlequicksearchbox" />
+    </queries> <!-- Jason's Permissions -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
         android:allowBackup="true"
@@ -26,7 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.madAssignment1"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ongoingorders"
+            android:exported="false" />
         <activity
             android:name=".chatbot"
             android:exported="false" />
@@ -41,6 +40,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
