--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,17 @@
         android:theme="@style/Theme.madAssignment1"
         tools:targetApi="31">
         <activity
+            android:name=".viewallproduct"
+            android:exported="true" />
+        <activity
+            android:name=".favorites"
+            android:exported="true" />
+        <activity
             android:name=".orderhistory"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ongoingorders"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".chatbot"
             android:exported="false" />
